--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "emeneo/moodle-enrol_apply",
-    "description": "An enrol plugin for Moodle that adds an approval step into the course enrolment process.",
+    "name": "jnovajosky/moodle-enroll_apply",
+    "description": "A fork of the Enemeno enrol plugin for Moodle that adds an approval step into the course enrolment process.",
     "type": "moodle-enrol",
     "license": "GPLv3",
     "require": {
